--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Emulator8086</string>
-    <array name="keywords">
+    <string-array name="keywords">
         <item>string</item>
         <item>int</item>
         <item>bool</item>
@@ -19,5 +19,5 @@
         <item>default</item>
         <item>class</item>
         <item>const</item>
-    </array>
+    </string-array>
 </resources>
